# red1z

./: CMakeLists.txt  LICENSE  README.md
examples/: demo.cpp  stream.cpp
include/red1z/: args.h  basic_pipeline.h  command.h  context.h  error.h  flags.h  interfaces.h  io.h  pipeline.h  red1z.h  reply.h  signature.h  socket.h  transaction.h
include/red1z/commands/: generic.h  hash.h  hyperloglog.h  list.h  set.h  sorted_set.h  stream.h  string.h
src/: redis.cpp  reply.cpp  socket.cpp
